objects/pse__ProjectVarianceBatchLog__c.object
<CustomObject>
    <customHelpPage>pse__projectVarianceBatchLogHelp</customHelpPage>
    <description>Stores the results of each Project Variance Batch iteration.</description>
    <fields>
        <fullName>pse__LogType__c</fullName>
        <description>Indicates the type of log (Error, Information, Abort, External).</description>
        <inlineHelpText>Indicates the type of log (Error, Information, Abort, External).</inlineHelpText>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Message__c</fullName>
        <description>The text of the message.</description>
        <inlineHelpText>The text of the message.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__ProjectVarianceBatch__c</fullName>
        <description>Master-Detail link to the related Project Variance Batch record.</description>
        <inlineHelpText>Master-Detail link to the related Project Variance Batch record.</inlineHelpText>
        <label>Project Variance Batch</label>
        <referenceTo>pse__ProjectVarianceBatch__c</referenceTo>
        <relationshipLabel>Project Variance Batch Logs</relationshipLabel>
        <relationshipName>ProjectVarianceBatchLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Variance Batch Logs</label>
    <nameField>
        <displayFormat>PVBL-{000000}</displayFormat>
        <label>Project Variance Batch Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Variance Batch Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>